kubernetes/main/apps/network/gateway/app/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: cilium-gateway
  labels:
    gateway-type: internal
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.100.0.48
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.schwarz47.at'
      name: https-gateway
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ''
            kind: Secret
            name: schwarz47-at-tls
        mode: Terminate
